basic/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test
  name: test
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - env:
        valueFrom:
            configMapKeyRef:
              name: dummy
              key: mainpage
        image: nginx
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: mainpage
          subPath: index.html
      volumes:
      - name: mainpage
        configMap:
          name: mainpage
